--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang = "en">
     <head>
         <meta charset="UTF-8">
-        <title>concrete poem</title>
+        <title>Easier Said Than Done</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div class="section">
             <div class="line1"></div>
                 <h2>She said</h2>
-            <h1 class="line2">
+            <h1>
                 "Just show me"
             </h1>
-            <h1 class="line3">
+            <h1>
                 that love is 
                 <a href="pageTwo/pageTwo.html">real</a>
             </h1>
