--- a/pageThree/pageThree.html
+++ b/pageThree/pageThree.html
@@ -2,18 +2,13 @@
 <html lang = "en">
     <head>
         <meta charset="UTF-8">
-        <title>concrete poem</title>
+        <title>Easier Said Than Done</title>
     </head>
     <body>
         <div class="section">
-            <div class="lineOne">
-                <h2>I said</h2>
-            </div>
+            <h2>I said</h2>
             <div class="lineanimation">
-                <h1 class="lineTwo">
-                    "Just trust
-                </h1>
-            </div>
+                "Just trust
             <h1 class="lineThree">
                 the way you 
                 <a href="../pageFour/pageFour.html">feel"</a>
