--- a/pageFour/pageFour.html
+++ b/pageFour/pageFour.html
@@ -2,27 +2,21 @@
 <html lang = "en">
     <head>
         <meta charset="UTF-8">
-        <title>concrete poem</title>
+        <title>Easier Said Than Done</title>
     </head>
     <body>
         <div class="section">
             <div class="one">
-                <h2 class="lineOne">
-                    She said
-                </h2>
+                <h2>She said</h2>
             </div>
             <div class="two">
-                <h1 class="lineTwo">
-                    "That's easier
-                </h1>
+                <h1>"That's easier</h1>
             </div>
             <div class="three">
-                <h1 class="lineThree">said</h1>
+                <h1>said</h1>
             </div>
             <div class="four">
-                <h1 class="lineFour">
-                    than
-                </h1>
+                <h1>than</h1>
             </div>
             <div class="five">
                 <h1 class="lineFive"> 
