--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
         <meta charset="UTF-8">
         <title>Easier Said Than Done</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="section">
-            <div class="line1"></div>
-                <h2>She said</h2>
-            <h1>
-                "Just show me"
-            </h1>
-            <h1>
+        <section>
+            <div class="topLeft">She Said</div>
+            <div class="center">"Just show me</div>
+            <div class="bottom">
                 that love is 
-                <a href="pageTwo/pageTwo.html">real</a>
-            </h1>
-        </div>
+                <a href="pageTwo/pageTwo.html">real."</a>
+            </div>
+        </section>
+    </body>
 </html>
