--- a/pageFour/pageFour.html
+++ b/pageFour/pageFour.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Easier Said Than Done</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <div class="section">
