--- a/pageFour/pageFour.html
+++ b/pageFour/pageFour.html
@@ -4,25 +4,19 @@
         <meta charset="UTF-8">
         <title>Easier Said Than Done</title>
         <link rel="stylesheet" href="../css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="section">
-            <div class="one">
-                <h2>She said</h2>
-            </div>
-            <div class="two">
-                <h1>"That's easier</h1>
-            </div>
-            <div class="three">
-                <h1>said</h1>
-            </div>
-            <div class="four">
-                <h1>than</h1>
-            </div>
+            <div class="one">She sad</div>
+            <div class="two">"That's easier"</div>
+            <div class="three">said</div>
+            <div class="four">than</div>
             <div class="five">
-                <h1 class="lineFive"> 
+                <div class="lineFive"> 
                     <a href="../pageFive/pageFive.html">done"</a>
-                </h1>
             </div>
         </div>
     </body>
