--- a/pageThree/pageThree.html
+++ b/pageThree/pageThree.html
@@ -4,13 +4,15 @@
         <meta charset="UTF-8">
         <title>Easier Said Than Done</title>
         <link rel="stylesheet" href="../css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="section">
-            <h2>I said</h2>
-            <div class="lineanimation">
-                "Just trust
-            <h1 class="lineThree">
+            <div>I Said</div>
+            <div class="lineanimation">"Just trust</div>
+            <div class="lineThree">
                 the way you 
                 <a href="../pageFour/pageFour.html">feel"</a>
             </h1>
