--- a/pageTwo/pageTwo.html
+++ b/pageTwo/pageTwo.html
@@ -10,21 +10,11 @@
     </head>
     <body>
         <div class="section">
-            <div class="one">
-                <h2 class="lineOne">I said</h2>
-            </div>
-            <div class="two">
-                <h1>"That's easier"</h1>
-            </div>
-            <div class="three">
-                <h1>said</h1>
-            </div>
-            <div class="four">
-                <h1>than</h1>
-            </div>
-            <div class="five">
-                <h1 class="lineFive">
-                    <a href="../pageThree/pageThree.html">done"</a>
+            <div class="one">I said</div>
+            <div class="two">"That's easier"</div>
+            <div class="three">said</div>
+            <div class="four">than</div>
+            <div class="five"><a href="../pageThree/pageThree.html">done"</a>
                 </h1>
             </div>
         </div>
