--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="center">"Just show me</div>
             <div class="bottom">
                 that love is 
-                <a href="pageTwo/pageTwo.html">real."</a>
+                <a href="pageTwo/pageTwo.html" class="real"> real."</a>
             </div>
         </section>
     </body>
