--- a/pageTwo/pageTwo.html
+++ b/pageTwo/pageTwo.html
@@ -9,9 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="section">
+        <div class="messageRight">
             <div class="one">I said</div>
-            <div class="two">"That's easier"</div>
+            <div class="two">"That's easier</div>
             <div class="three">said</div>
             <div class="four">than</div>
             <div class="five"><a href="../pageThree/pageThree.html">done"</a>
