--- a/pageThree/pageThree.html
+++ b/pageThree/pageThree.html
@@ -9,9 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="section">
-            <div>I Said</div>
-            <div class="lineanimation">"Just trust</div>
+        <div class="messageRight">
+            <div class="lineOne">I Said</div>
+            <div class="lineAnimation">"Just trust</div>
             <div class="lineThree">
                 the way you 
                 <a href="../pageFour/pageFour.html">feel"</a>
