--- a/pageTwo/pageTwo.html
+++ b/pageTwo/pageTwo.html
@@ -14,7 +14,7 @@
             <div class="two">"That's easier</div>
             <div class="three">said</div>
             <div class="four">than</div>
-            <div class="five"><a href="../pageThree/pageThree.html">done"</a>
+            <div class="five"><a href="../pageThree/pageThree.html" class="rightDone">done"</a>
                 </h1>
             </div>
         </div>
