--- a/pageFour/pageFour.html
+++ b/pageFour/pageFour.html
@@ -9,15 +9,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="section">
-            <div class="one">She sad</div>
-            <div class="two">"That's easier"</div>
-            <div class="three">said</div>
-            <div class="four">than</div>
-            <div class="five">
+        <section>
+            <div class="she">She said</div>
+            <div class="easy">"That's easier"</div>
+            <div class="said">said</div>
+            <div class="than">than</div>
+            <div class="done">
                 <div class="lineFive"> 
                     <a href="../pageFive/pageFive.html">done"</a>
             </div>
-        </div>
+        </section>
     </body>
 </html>
