--- a/pageFive/pageFive.html
+++ b/pageFive/pageFive.html
@@ -9,14 +9,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="section">
-            <p>Well it is</p>
-            <div class="fade in">cause</div>
-            <div class="fade in">true</div>
-            <div class="fade in">love</div>
-            <div class="fade in">it</div>
-            <div class="fade in">ain't</div>
-            <div class="fade in">easy</div>
+        <div class="page5section">
+            <div class="scaleCenter">Well it is</div>
+            <div class="cause">cause</div>
+            <div class="true">true</div>
+            <div class="love">love</div>
+            <div class="it">it</div>
+            <div class="aint">ain't</div>
+            <div class="last">easy</div>
         </div>
     </body>
 </html>
