--- a/pageThree/pageThree.html
+++ b/pageThree/pageThree.html
@@ -14,7 +14,7 @@
             <div class="lineAnimation">"Just trust</div>
             <div class="lineThree">
                 the way you 
-                <a href="../pageFour/pageFour.html">feel"</a>
+                <a href="../pageFour/pageFour.html" class="feel">feel"</a>
             </h1>
         </div>
     </body>
