--- a/pageTwo/pageTwo.html
+++ b/pageTwo/pageTwo.html
@@ -14,8 +14,8 @@
             <div class="two">"That's easier</div>
             <div class="three">said</div>
             <div class="four">than</div>
-            <div class="five"><a href="../pageThree/pageThree.html" class="rightDone">done"</a>
-                </h1>
+            <div class="five">
+                <a href="../pageThree/pageThree.html" class="rightDone">done"</a>
             </div>
         </div>
     </body>
