--- a/pageFive/pageFive.html
+++ b/pageFive/pageFive.html
@@ -16,7 +16,9 @@
             <div class="love">love</div>
             <div class="it">it</div>
             <div class="aint">ain't</div>
-            <div class="last">easy</div>
+            <a href="../index.html" class="last">easy</a>
+            <!-- <div class="last">easy</div> -->
+             
         </div>
     </body>
 </html>
