--- a/pageFour/pageFour.html
+++ b/pageFour/pageFour.html
@@ -14,9 +14,8 @@
             <div class="easy">"That's easier"</div>
             <div class="said">said</div>
             <div class="than">than</div>
-            <div class="done">
-                <div class="lineFive"> 
-                    <a href="../pageFive/pageFive.html">done"</a>
+            <div class="done"> 
+                <a href="../pageFive/pageFive.html" class="lineFive">done"</a>
             </div>
         </section>
     </body>
