--- a/pageFour/pageFour.html
+++ b/pageFour/pageFour.html
@@ -11,7 +11,7 @@
     <body>
         <section>
             <div class="she">She said</div>
-            <div class="easy">"That's easier"</div>
+            <div class="easy">"That's easier</div>
             <div class="said">said</div>
             <div class="than">than</div>
             <div class="done"> 
